--- a/src/components/ha-labeled-slider.html
+++ b/src/components/ha-labeled-slider.html
@@ -1,6 +1,6 @@
 <link rel='import' href='../../bower_components/polymer/polymer.html'>
 <link rel='import' href='../../bower_components/iron-icon/iron-icon.html'>
-<link rel='import' href='../../bower_components/paper-slider/paper-slider.html'>
+<link rel='import' href='ha-themed-slider.html'>
 
 <dom-module id='ha-labeled-slider'>
   <template>
@@ -29,8 +29,8 @@
     <div class='title'>[[caption]]</div>
     <iron-icon icon='[[icon]]'></iron-icon>
     <div class='slider-container'>
-      <paper-slider min='[[min]]' max='[[max]]' value='{{value}}'>
-      </paper-slider>
+      <ha-themed-slider disable-off-when-min='{{disableOffWhenMin}}' theme='[[theme]]' min='[[min]]' max='[[max]]' is-on='[[isOn]]' value='{{value}}'>
+      </ha-themed-slider>
     </div>
   </template>
 </dom-module>
@@ -54,6 +54,19 @@ Polymer({
 
     max: {
       type: Number,
+    },
+
+    isOn: {
+      type: Boolean,
+    },
+
+    disableOffWhenMin: {
+      type: Boolean,
+      notify: true,
+    },
+
+    theme: {
+      type: Object,
     },
 
     value: {
